# rsstwit

./: .gitignore  README.md  rsstwit.cabal
src/: Cli.hs  Config.hs  Db.hs  FetchFeed.hs  Twitter.hs
