name:                rsstwit
version:             0.1.0.0
synopsis:            Grab RSS feeds from the interweb and tweet their content, a-la TwitterFeed (soon to be RIP)
description:         Please see README.md
homepage:            https://github.com/ciderpunx/rsstwit
license:             GPL2
license-file:        LICENSE
author:              Charlie Harvey
maintainer:          https://charlieharvey.org.uk/contact
copyright:           2016 Charlie Harvey
category:            Script
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , extra
                     , http-conduit
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , resourcet
                     , time
                     , text
                     , xml-conduit
  default-language:    Haskell2010

executable rsstwit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rsstwit
  default-language:    Haskell2010

test-suite rsstwit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rsstwit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rsstwit
